--- a/app/less/main.less
+++ b/app/less/main.less
@@ -245,12 +245,16 @@ form {
 		width: 350px;
 		padding-left: 70px;
 		box-sizing: border-box; 
+		transition: all .5s ease;
 		border: 3px solid white;
 		border-bottom: 1px solid black;
 	}
 	input[name='name'] {background: url('../img/avatar.png') no-repeat 20px}
 	input[name='phone']{background: url('../img/phone-call.png') no-repeat 20px}
 	input[name='email'] {background: url('../img/envelope.png') no-repeat 20px}
+	input.error {
+		border: 3px solid #ff0000;
+	}
 	#submit {
 		height: 80px;
 		padding-left: 0;
